[gd_scene load_steps=7 format=3 uid="uid://du8k8mrf5fv0m"]

[ext_resource type="Script" path="res://controllers/scripts/fps_controller_by_majikayo.gd" id="1_1hehx"]
[ext_resource type="PackedScene" uid="uid://cdp4s5g3gijqj" path="res://meshes/decorations/disguise-glasses.glb" id="1_2r1gh"]
[ext_resource type="PackedScene" uid="uid://7dm87wp0hyjg" path="res://meshes/decorations/wiggly_hair.tscn" id="2_anfa5"]
[ext_resource type="Script" path="res://controllers/scripts/interaction_ray_cast.gd" id="4_ygiri"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nga15"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rv6a4"]

[node name="FPSControllerByMajikayo" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER")]
platform_floor_layers = 4294967292
script = ExtResource("1_1hehx")
CAMERA_CONTROLLER = NodePath("HeadOriginalPosition/Head/CameraSmooth/Camera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_nga15")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_rv6a4")

[node name="disguise-glasses" parent="WorldModel" instance=ExtResource("1_2r1gh")]
transform = Transform3D(-2.2, 0, -3.32191e-07, 0, 2.2, 0, 3.32191e-07, 0, -2.2, 7.50127e-08, 1.25208, -0.0815519)

[node name="WigglyHair" parent="WorldModel" instance=ExtResource("2_anfa5")]
transform = Transform3D(2.58393, 0, 3.97904e-13, 0, 2.13661, 0, -3.97904e-13, 0, 2.58393, 0, 1.7467, 0)

[node name="HeadOriginalPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79, 0)

[node name="Head" type="Node3D" parent="HeadOriginalPosition"]
unique_name_in_owner = true

[node name="CameraSmooth" type="Node3D" parent="HeadOriginalPosition/Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="HeadOriginalPosition/Head/CameraSmooth"]
unique_name_in_owner = true
cull_mask = 1048573
current = true

[node name="InteractionRayCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
target_position = Vector3(0, 0, -2)
debug_shape_custom_color = Color(0.00392157, 0.996078, 0, 1)
script = ExtResource("4_ygiri")

[node name="ReflectionProbe" type="ReflectionProbe" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
update_mode = 1
enable_shadows = true

[node name="StairsAheadRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, -1)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -0.75, 0)
